# SmartChatBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.circleci/: config.yml
infra/terraform-render/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/ai_client_api/: pyproject.toml
src/ai_client_api/src/ai_client_api/: __init__.py  client.py
src/chat_client_api/: README.md  pyproject.toml
src/chat_client_api/src/chat_client_api/: __init__.py  client.py  message.py
src/chat_client_api/tests/: test_api_smoke.py
src/claude_client_impl/: pyproject.toml
src/claude_client_impl/src/claude_client_impl/: __init__.py  claude_impl.py
src/claude_client_impl/tests/: test_register.py
src/discord_client_impl/: pyproject.toml
src/discord_client_impl/src/discord_client_impl/: __init__.py  discord_impl.py  message_impl.py
src/discord_client_impl/tests/: test_discord_rest.py  test_gateway_filter.py
src/gmail_client_impl/: pyproject.toml
src/gmail_client_impl/src/gmail_client_impl/: __init__.py  gmail_impl.py  message_impl.py
src/gmail_client_impl/tests/: test_body_parsing.py  test_message_impl.py  test_parse_helpers.py  test_token_store.py
src/mail_client_api/: pyproject.toml
src/mail_client_api/src/mail_client_api/: __init__.py  client.py  message.py
tests/: test_main.py
tests/e2e/: test_main_e2e.py
tests/integration/: test_main_integration.py
